demo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: demo-app
  annotations:
    linkerd.io/inject: enabled
  labels:
    linkerd.io/inject: enabled
